zeal/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pods
spec:
  containers:
  - name: nginx
    image: nginx
  - name: redis
    image: redis
